<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CookieStore</string>
    <string name="cart_text">DAT CART SCREEN</string>
    <string name="about_text">OMAGERD! ABOUT SCREEN!</string>
    <string name="home_products">Products</string>
    <string name="product_details">Product Details</string>
    <string name="quantity_Number">Quantity: </string>
    <string name="add">Add</string>
    <string name="nameLabel">Type: </string>
    <string name="descriptionLabel">Description: </string>
    <string name="priceLabel">Price: $</string>
    <string name="ok_text">Ok</string>
</resources>
